# rapid-catchment-generator

./: .gitattributes  .gitignore  README.md  categories.py  conftest.py  example.inp  fuzzy_catchments.py  main.py  memberships.py  pyproject.toml  requirements.txt  rules.py  runner.py  setup.py
.github/workflows/: rcg.yaml
docs/source/: conf.py  fuzzy.rst  index.rst  inp_manage.rst  intro.rst  runner.rst
fuzzy/: categories.py  engine.py  memberships.py  rules.py
fuzzy/test_fuzzy/: test_categories.py  test_engine.py  test_memberships.py
gui/: app.py  example.inp  help_content.txt
inp_manage/: example.inp  inp.py
inp_manage/test_inp_manage/: test_file.inp  test_inp.py
rcg/: cli.py  example.inp  exceptions.py  interfaces.py  logging_config.py  runner.py  validation.py
rcg/config/: __init__.py  defaults.json  loader.py  rules.json
rcg/fuzzy/: categories.py  engine.py  memberships.py  rule_definitions.py  rule_engine.py  rules.py
rcg/fuzzy/test_fuzzy/: test_categories.py  test_engine.py  test_memberships.py  test_rules.py
rcg/inp_manage/: inp.py
rcg/inp_manage/test_inp_manage/: test_file.inp  test_inp.py
