[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid-catchment-generator"
version = "1.0.0"
description = "Generate SWMM subcatchments using fuzzy logic"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rafal Buczynski"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-fuzzy",
    "swmmio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "ruff",
]
gui = [
    "customtkinter>=5.2.0",
]
# Note: GUI requires tkinter which is part of Python's standard library
# On some systems you may need to install it via system package manager:
# - Ubuntu/Debian: sudo apt-get install python3-tk
# - Fedora: sudo dnf install python3-tkinter
# - macOS: tkinter is included with Python from python.org

[project.scripts]
rcg = "rcg.cli:main"

[project.urls]
Homepage = "https://github.com/BuczynskiRafal/rapid-catchment-generator"
Repository = "https://github.com/BuczynskiRafal/rapid-catchment-generator"

[tool.setuptools.packages.find]
include = ["rcg*"]

[tool.setuptools.package-data]
rcg = ["py.typed", "config/*.json"]

[tool.pytest.ini_options]
testpaths = ["rcg"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "skfuzzy.*",
    "swmmio.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["rcg"]
omit = [
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py39"
line-length = 127

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["B011", "B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
